tests/missing_fmt.stderr
error: requires at least a format string argument
 --> $DIR/missing_fmt.rs:3:1
  |
3 | #[error_context]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
